--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+    rel="stylesheet"
+    href="https://pro.fontawesome.com/releases/v5.15.3/css/all.css"
+    integrity="sha384-iKbFRxucmOHIcpWdX9NTZ5WETOPm0Goy0WmfyNcl52qSYtc2Buk0NCe6jU1sWWNB"
+    crossorigin="anonymous"
+  />
   <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="img/icons/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-icon-72x72.png">
